--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,22 +7,22 @@
     <style>
         @font-face {
             font-family: HelveticaNeue75;
-            src: url(./helvetica-neue-lt-std-75-bold.otf);
+            src: url(fonts/helvetica-neue-lt-std-75-bold.otf);
         }
 
         @font-face {
             font-family: HelveticaNeue63;
-            src: url(helvetica-neue-lt-std-63-medium-extended.otf);
+            src: url(fonts/helvetica-neue-lt-std-63-medium-extended.otf);
         }
 
         @font-face {
             font-family: HelveticaNeue55;
-            src: url(helvetica-neue-lt-std-55-roman.otf);
+            src: url(fonts/helvetica-neue-lt-std-55-roman.otf);
         }
 
         @font-face {
             font-family: HelveticaNeue45;
-            src: url(helvetica-neue-lt-std-45-light.otf);
+            src: url(fonts/helvetica-neue-lt-std-45-light.otf);
         }
 
         * {
@@ -385,7 +385,7 @@
             <a>SHOP NEW ARRIVALS</a>
         </div>
     </section>
-    <section style="background-image: url('https://images.unsplash.com/photo-1590342186485-b611197a5aae?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80');">
+    <section style="background-image: url('images/mike-palmowski-VHcrw_MENoc-unsplash.jpg');">
         <div id='section-1-title' class="left top">
             <h1>VINTAGE INSPIRED</h1>
             <p>
@@ -396,13 +396,13 @@
         </div>
     </section>
     <section id='section-photo-triple'>
-        <div style="background-image: url('./public/matthew-reyes-K6alnPrDWRY-unsplash.jpg');">
+        <div style="background-image: url('images/matthew-reyes-K6alnPrDWRY-unsplash.jpg');">
             
         </div>
-        <div style="background-image: url('./public/pexels-labskiii-6135785.jpg');">
+        <div style="background-image: url('images/pexels-labskiii-6135785.jpg');">
 
         </div>
-        <div style="background-image: url('./public/pexels-kevin-kabore-4966995.jpg');">
+        <div style="background-image: url('images/pexels-kevin-kabore-4966995.jpg');">
 
         </div>
     </section>
@@ -416,21 +416,21 @@
     <section id='section-arrivals'>
         <div id='arrivals'>
             <h3>NEW ARRIVALS</h3>
-            <div style="background-image: url('./public/autri-taheri-6h9scTr00Ls-unsplash.jpg');">
+            <div style="background-image: url('images/autri-taheri-6h9scTr00Ls-unsplash.jpg');">
                 
             </div>
-            <div style="background-image: url('./public/clem-onojeghuo-YhgXfs80RJo-unsplash.jpg')">
+            <div style="background-image: url('images/clem-onojeghuo-YhgXfs80RJo-unsplash.jpg')">
 
             </div>
-            <div style="background-image: url('./public/mark-adriane-bO3S03I2Aw8-unsplash.jpg')">
+            <div style="background-image: url('images/mark-adriane-bO3S03I2Aw8-unsplash.jpg')">
 
             </div>
-            <div style="background-image: url('./public/matthew-reyes-gXCXqB9giWc-unsplash.jpg')">
+            <div style="background-image: url('images/matthew-reyes-gXCXqB9giWc-unsplash.jpg')">
 
             </div>
         </div>
     </section>
-    <section style="background-image: url('./public/pexels-daniel-adesina-833052.jpg');">
+    <section style="background-image: url('images/pexels-daniel-adesina-833052.jpg');">
         <div id='section-1-title' class="bottom right">
             <h1>PRAY FOR ROCK</h1>
             <p>
@@ -448,19 +448,19 @@
                     <path d="M18.4822 11.5516L7.16058 0.200447C6.89401 -0.0668158 6.4665 -0.0668158 6.19993 0.200447C5.93336 0.46771 5.93336 0.89634 6.19993 1.1636L17.0387 12.0306L6.19993 22.8976C5.93336 23.1649 5.93336 23.5935 6.19993 23.8608C6.3307 23.9919 6.50673 24.0625 6.67774 24.0625C6.84874 24.0625 7.02478 23.9969 7.15555 23.8608L18.4772 12.5097C18.7437 12.2475 18.7437 11.8138 18.4822 11.5516Z" fill="#000F08"/>
                 </svg>
             </h3>
-            <div id="main-shop-photo" style="background-image: url('./public/hisu-lee-i2JDnMDMYv8-unsplash.jpg');">
+            <div id="main-shop-photo" style="background-image: url('images/hisu-lee-i2JDnMDMYv8-unsplash.jpg');">
 
             </div>
-            <div id="shop-photo" style="background-image: url('./public/seth-doyle-R5tHd-aYmPs-unsplash.jpg');">
+            <div id="shop-photo" style="background-image: url('images/seth-doyle-R5tHd-aYmPs-unsplash.jpg');">
                 
             </div>
-            <div id="shop-photo" style="background-image: url('./public/yogendra-singh-R73uOEn9tio-unsplash.jpg');">
+            <div id="shop-photo" style="background-image: url('images/yogendra-singh-R73uOEn9tio-unsplash.jpg');">
                 
             </div>
-            <div id="shop-photo" style="background-image: url('./public/mubariz-mehdizadeh-o-wlIFT4zE4-unsplash.jpg');">
+            <div id="shop-photo" style="background-image: url('images/mubariz-mehdizadeh-o-wlIFT4zE4-unsplash.jpg');">
                 
             </div>
-            <div id="shop-photo" style="background-image: url('./public/sofia-3PgSkwoyIOM-unsplash.jpg');">
+            <div id="shop-photo" style="background-image: url('images/sofia-3PgSkwoyIOM-unsplash.jpg');">
                 
             </div>
             <h3 id='shop-title-bottom'>#BACULEJOS</h3>
