--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -147,6 +147,8 @@
                     min-height: 20px;
                     min-width: 20px;
 
+                    border-radius: 0;
+
                     background: black;
 
                     margin: 0;
@@ -169,6 +171,8 @@
                 display: block;
 
                 margin: 0 auto;
+
+                color: white;
 
                 font-size: 1.2rem;
             }
