--- a/views/teste.ejs
+++ b/views/teste.ejs
@@ -5,84 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <%- include('./components/homePage/style/style-preset') -%>
-    <%- include('./components/homePage/style/style-header') -%>
+    <%- include('./components/style/style-preset') -%>
+    <%- include('./components/style/style-header') -%>
+    <%- include('./components/style/style-footer') -%> 
     <style>
-        /* section.home-section{
-            height: 70%;
-
-            background: red;
-        }
-
-        div.home-section-title {
-            background: green;
-
-            height: 250px;
-
-            padding: 0 5%;
-
-            text-align: center;
-
-            display: flex;
-            flex-direction: column;
-
-            align-items: center;
-        }
-
-            div.home-section-title h1 {
-                font-size: 2.3rem;
-
-                position: relative;
-
-                top: -25px;
-            }
-
-            div.home-section-title p {
-                margin-bottom: 4%;
-
-                line-height: 25px;
-            }
-
-            div.home-section-title button {
-                border: 2px solid black;
-
-                padding: 10px 20px;
-
-                font-size: 1.2rem;
-            }
-
-        #section-arrivals {
-            background: green;
-
-            padding: 5px;
-        }
-            #arrivals h3 {
-                text-align: left;
-
-                height: 60px;
-
-                display: flex;
-
-                align-items: center;
-            }
-
-            #arrivals > div {
-                height: 80vh;
-
-                background: blue;
-            }
- */
-
-
-
-
-
-
-
-
-
-
-
         .left {
             left: 10%;
         }
@@ -321,7 +247,7 @@
     </style>
 </head>
 <body>
-    <%- include('./components/homePage/header') -%>
+    <%- include('./components/header') -%>
     <section style="background-image: url('https://images.unsplash.com/photo-1497378571960-a65470d60969?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');"> 
         <div id='' class="section-title left bottom">
             <h1>NEW COLLECTION</h1>
@@ -410,47 +336,7 @@
             <h3 id='shop-title-bottom'>#BACULEJOS</h3>
         </div>
     </section>
-<!--     <section class='home-section'>
-
-    </section>
-    <div class="home-section-title">
-        <h1>NEW <br> COLLECTION</h1>
-        <p>Our easiest chuck-on-and-go staples come with a serious style heritage that’s liberating, sexy, comfy and supremely cool.</p>
-        <button>SHOW NEW ARRIVALS</button>
-    </div>
-    <section class='home-section'>
-
-    </section>
-    <div class="home-section-title">
-        <h1>NEW <br> COLLECTION</h1>
-        <p>Our easiest chuck-on-and-go staples come with a serious style heritage that’s liberating, sexy, comfy and supremely cool.</p>
-        <button>SHOW NEW ARRIVALS</button>
-    </div>
-    <section class='home-section'>
-
-    </section>
-    <div class="home-section-title">
-        <h1>NEW <br> COLLECTION</h1>
-        <p>Our easiest chuck-on-and-go staples come with a serious style heritage that’s liberating, sexy, comfy and supremely cool.</p>
-        <button>SHOW NEW ARRIVALS</button>
-    </div>
-    <section id='section-arrivals'>
-        <div id='arrivals'>
-            <h3>NEW ARRIVALS</h3>
-            <div>
-                
-            </div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-        </div>
-    </section> -->
+    <%- include('./components/footer') %> 
     <script src="controller.js"></script>
 </body>
 </html>
