--- a/views/components/style/style-header.ejs
+++ b/views/components/style/style-header.ejs
@@ -15,6 +15,7 @@
         align-items: center;
 
         color: #FFFFFF;
+        fill: #FFFFFF;
     }
 
         .home-page-header-aside {
@@ -28,7 +29,7 @@
 
     /* HEADER MOBILE */
     .home-page-header.mobile {
-        padding: 3% 2% 0;
+        padding: 2% 2% 0;
 
         flex-direction: column;
     }
