--- a/views/components/homePage/section.ejs
+++ b/views/components/homePage/section.ejs
@@ -2,13 +2,13 @@
     <div id='' class="section-title <%= positions %>">
         <h1><%= title %></h1>
         <p>
-            <% for(let el of text) { %>
-            <%   if(el == '<br>') { %>
+            <% for(let el of text) {
+                 if(el == '<br>') { %>
                     <br> 
             <%   } else {            %>
-            <%=     el               %>
-            <%   }                   %>
-            <% }                     %>
+                    <%= el %>
+            <%   }
+               } %>
         </p>
         <a><%= button_text %></a>
     </div>
