Página de catálogo aprimorada

--- a/views/components/homePage/style/style-home-page.ejs
+++ b/views/components/homePage/style/style-home-page.ejs
@@ -159,7 +159,7 @@
             section#section-arrivals {
                 flex-direction: column;
 
-                min-height: 100vh;
+                height: 75vh;
                 height: initial;
 
                 padding: 8vh 15px 2vh;
@@ -174,7 +174,7 @@
                 }
 
                 #arrivals > div {
-                    min-height: 100vh;
+                    height: 75vh;
                 }
         }
 
@@ -224,7 +224,7 @@
         }
 
             #shop {
-                grid-template-rows: repeat(5, 100vh);
+                grid-template-rows: repeat(5, 75vh);
                 grid-template-columns: 1fr;
                 grid-template-areas: 
                     'A'
@@ -236,6 +236,10 @@
 
                 #shop-title-top {
                     top: -3rem;
+                }
+
+                .shop-photo {
+                    height: 75vh;
                 }
 
                 #shop-title-bottom {
