--- a/views/components/style/style-preset.ejs
+++ b/views/components/style/style-preset.ejs
@@ -26,14 +26,14 @@
     }
 
     body {
-        height: 100vh;
+        min-height: 100vh;
 
         font-family: HelveticaNeue45;
 
         position: relative;
     }
 
-    h1, h2, h4, h5, h6 {
+    h1, h2, h5, h6 {
         font-family: HelveticaNeue63;
 
         display: flex;
@@ -41,7 +41,7 @@
         align-items: center;
     }
 
-    h3 {
+    h3, h4 {
         font-family: HelveticaNeue45;
     }
 
@@ -67,7 +67,7 @@
 
     section {
         width: 100%;
-        height: 100%;
+        height: 100vh;
 
         position: relative;
 
