--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -65,34 +65,10 @@
         </div>
     </div>
 </footer>
+<script src="utils/toggleIcon.js"></script>
+<script src="utils/toggleContent.js"></script>
 <script>
-    function createIcon(content) {
-        let svg = document.createElement('div')
-        
-        svg.innerHTML = content
-
-        return svg.firstElementChild
-    }
-
-    let plusIcon = `
-        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M9 0H7V7L0 7V9H7V16H9V9H16V7L9 7V0Z" fill="#000F08"/>
-        </svg>
-    `
-
-    let minesIcon = `
-        <svg width="16" height="2" viewBox="0 0 16 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect y="2" width="2" height="16" transform="rotate(-90 0 2)" fill="#000F08"/>
-        </svg>  
-    `
-
-    document.querySelectorAll('.footer-list-title').forEach(el => {
-        el.addEventListener('click', e => {
-            let isListOpen = e.target.parentElement.querySelector('ul').classList.toggle('active')
-
-            let updatedIcon = isListOpen ? minesIcon : plusIcon
-
-            e.target.replaceChild(createIcon(updatedIcon), e.target.querySelector('svg'))
-        })
+    toggleContent([{elClick: '.footer-list-title', elToggle: 'ul'}], (icon, el) => {
+        toggleIcon(icon, el)
     })
 </script>
