--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('./components/htmlTop', {page: 'home'}) %> 
+<%- include('./components/htmlTop', {page: 'Home'}) %> 
     <%- include('./components/homePage/section', {
         background_image: 'https://images.unsplash.com/photo-1497378571960-a65470d60969?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80',
         title: 'NEW COLLECTION',
@@ -50,10 +50,10 @@
                 </svg>
             </h3>
             <div id="main-shop-photo" style="background-image: url('images/hisu-lee-i2JDnMDMYv8-unsplash.jpg');"></div>
-            <div id="shop-photo" style="background-image: url('images/seth-doyle-R5tHd-aYmPs-unsplash.jpg');"></div>
-            <div id="shop-photo" style="background-image: url('images/yogendra-singh-R73uOEn9tio-unsplash.jpg');"></div>
-            <div id="shop-photo" style="background-image: url('images/mubariz-mehdizadeh-o-wlIFT4zE4-unsplash.jpg');"></div>
-            <div id="shop-photo" style="background-image: url('images/sofia-3PgSkwoyIOM-unsplash.jpg');"></div>
+            <div class="shop-photo" style="background-image: url('images/seth-doyle-R5tHd-aYmPs-unsplash.jpg');"></div>
+            <div class="shop-photo" style="background-image: url('images/yogendra-singh-R73uOEn9tio-unsplash.jpg');"></div>
+            <div class="shop-photo" style="background-image: url('images/mubariz-mehdizadeh-o-wlIFT4zE4-unsplash.jpg');"></div>
+            <div class="shop-photo" style="background-image: url('images/sofia-3PgSkwoyIOM-unsplash.jpg');"></div>
             <h3 id='shop-title-bottom'>#BACULEJOS</h3>
         </div>
     </section>
