--- a/views/components/htmlTop.ejs
+++ b/views/components/htmlTop.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +20,7 @@
             <%- include('./style/style-color-picker') %>
             <% break
         case 'Product': %>
+            <%- include('./productPage/style/style-product-page') %>
             <%- include('./style/style-size-picker') %>
             <%- include('./style/style-color-picker') %>
             <% break %>
