--- a/views/components/style/style-color-picker.ejs
+++ b/views/components/style/style-color-picker.ejs
@@ -9,6 +9,8 @@
             width: 35px;
 
             margin: 3px;
+
+            border-radius: 0;
         }
 
         #product-color-preview.selected {
