--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -119,4 +119,4 @@
         toggleIcon(icon, el)
     })
 </script>
-<%- include('./components/htmlBottom') %> 
+<%- include('./components/htmlBottom', {page: 'Catalog'}) %> 
