--- a/views/components/htmlBottom.ejs
+++ b/views/components/htmlBottom.ejs
@@ -3,7 +3,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script>
-            let matchSize = window.matchMedia('(max-width: 900px')
+            let matchSize = window.matchMedia('(max-width: 1000px)')
             handleCarouselUsage(matchSize, true)
             matchSize.addListener(handleCarouselUsage)
 
