--- a/views/components/productPage/style/style-product-page.ejs
+++ b/views/components/productPage/style/style-product-page.ejs
@@ -6,7 +6,8 @@
     section#product-buy {
         width: 100%;
 
-        min-height: calc(100vh - 80px);
+        min-height: 700px;
+        height: calc(100vh - 80px);
 
         display: flex;
     }
@@ -34,6 +35,8 @@
             padding: 1% 3%;
 
             overflow-y: scroll;
+
+            position: relative;
         }
 
             section#product-buy aside::-webkit-scrollbar {
@@ -118,7 +121,7 @@
                     margin-right: 20px;
                 }
 
-            #product-info-text {
+            .product-info-text {
                 color: #8C8C8C;
 
                 position: relative;
@@ -134,9 +137,29 @@
                 font-size: 0.8rem;
 
                 line-height: 20px;
+
+                max-height: 0;
+
+                overflow: hidden;
+
+                transition: max-height 0.4s ease-in-out;
             }
 
-    @media screen and (max-width: 900px) {
+                .product-info-text.active {
+                    max-height: 1000px;
+                }
+
+            #product-info #arrow-icon {
+                fill: red;
+
+                position: sticky;
+
+                bottom: 10px;
+
+                left: calc(50% - 20px);
+            }
+
+    @media screen and (max-width: 1000px) {
         #product-photo-field {
             width: 60%;
         }
@@ -186,32 +209,53 @@
                 object-fit: cover;
             }
 
-    section#section-arrivals {
-        padding: 8% 6% 5%;
+    @media screen and (max-width: 800px) {
+        section#product-buy {
+            flex-direction: column;
 
-        height: 80vh;
-    }
-
-        #arrivals {
-            position: relative;
-            
-            width: 100%;
-            height: 100%;
-
-            display: flex;
+            height: initial;
         }
-            #arrivals h3 {
-                position: absolute;
 
-                top: -10%;
-                left: 0;
-                right: 0;
-                
-                text-align: center;
+        #product-photo-field, section#product-buy aside {
+            width: 100%;
+        }
+
+        section#product-buy aside {
+            padding-top: 70px;
+        }
+
+            #product-buy-field {
+                width: 60%;
             }
 
-            #arrivals > div {
-                width: 100%;
+        section#product-extra {
+            flex-direction: column;
+
+            height: initial;
+        }
+
+            #extra-0 {
                 height: 100%;
             }
+
+                #product-extra-items-title {
+                    position: relative;
+
+                    left: 0;
+                    right: 0;
+
+                    bottom: -20px;
+
+                    width: fit-content;
+
+                    margin: 0 auto;
+                    
+                    text-align: center;
+                }
+
+            #product-extra-items, #extra-0, .extra-item {
+                width: 100%;
+                max-width: 100%;
+            }
+    }
 </style>
